# cmake-exercise-wt2425

./: .gitignore  CMakeLists.txt  DockerFile  Dockerfile  Dockerfile.dockerfile  README.md  build_and_run.sh  dockerfile  main  main.cpp  multistage.Dockerfile
.devcontainer/: devcontainer.json
cmake/: CMakeLists.txt  README.md  main.cpp
cmake/yamlParser/: yamlParser.cpp
yamlParser/: Dockerfile  yamlParser.cpp
